--- a/Pod/Assets/SCStoryboard.storyboard
+++ b/Pod/Assets/SCStoryboard.storyboard
@@ -9626,7 +9626,7 @@ Remove search filter?</string>
             <objects>
                 <tableViewController storyboardIdentifier="SCBroadcastController" id="S0N-Ry-2Pf" customClass="SCBroadcastController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="8IA-8t-D0N">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="466"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -9787,7 +9787,7 @@ Remove search filter?</string>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n82-xg-Vqq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="288" y="12491"/>
+            <point key="canvasLocation" x="269" y="12491"/>
         </scene>
         <!--Certificate Import-->
         <scene sceneID="rQh-zA-1IC">
@@ -10671,6 +10671,108 @@ Remove search filter?</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w7z-fa-zYv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-55" y="5071"/>
+        </scene>
+        <!--Broadcast-->
+        <scene sceneID="9Ss-ce-QQT">
+            <objects>
+                <viewController storyboardIdentifier="SCBroadcastChatController" extendedLayoutIncludesOpaqueBars="YES" id="iYl-Hw-Tt4" customClass="SCBroadcastChatController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RUY-Wl-fMs"/>
+                        <viewControllerLayoutGuide type="bottom" id="jaJ-r9-ENn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kZE-cO-2aF">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="22y-QY-7PC" userLabel="innerView">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                                <subviews>
+                                    <containerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WnP-vb-Bwb">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="466"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <segue destination="S0N-Ry-2Pf" kind="embed" id="bZC-m0-Sbf"/>
+                                        </connections>
+                                    </containerView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ECo-Kc-A4s" userLabel="toolbarView">
+                                        <rect key="frame" x="0.0" y="466" width="320" height="38"/>
+                                        <subviews>
+                                            <textView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" delaysContentTouches="NO" canCancelContentTouches="NO" bouncesZoom="NO" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="Wwg-VX-MGM" userLabel="messageTextView">
+                                                <rect key="frame" x="8" y="3" width="254" height="32"/>
+                                                <color key="backgroundColor" red="0.84968991620000001" green="0.84968991620000001" blue="0.84968991620000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="textColor" red="0.10588235" green="0.26666667999999999" blue="0.42745097999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="13"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="iYl-Hw-Tt4" id="9I4-Oa-bJD"/>
+                                                </connections>
+                                            </textView>
+                                            <button opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uSH-nI-Kz5" userLabel="submitButton">
+                                                <rect key="frame" x="268" y="6" width="43" height="26"/>
+                                                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="43" id="TZP-lP-seL"/>
+                                                    <constraint firstAttribute="height" constant="26" id="ZKU-k9-Ig3"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="15"/>
+                                                <state key="normal" image="ico_send_message_white" backgroundImage="btn_send_message_blue">
+                                                    <color key="titleColor" red="0.1960784314" green="0.30980392159999998" blue="0.52156862749999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <state key="selected" backgroundImage="btn_send_message_dark_blue"/>
+                                                <state key="highlighted" backgroundImage="btn_send_message_dark_blue">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="Wwg-VX-MGM" firstAttribute="leading" secondItem="ECo-Kc-A4s" secondAttribute="leading" constant="8" id="Qy3-1w-w8f"/>
+                                            <constraint firstAttribute="bottom" secondItem="Wwg-VX-MGM" secondAttribute="bottom" constant="3" id="Rx0-gQ-rGx"/>
+                                            <constraint firstAttribute="trailing" secondItem="uSH-nI-Kz5" secondAttribute="trailing" constant="9" id="Stz-0j-1ST"/>
+                                            <constraint firstItem="Wwg-VX-MGM" firstAttribute="top" secondItem="ECo-Kc-A4s" secondAttribute="top" constant="3" id="bSq-lO-psX"/>
+                                            <constraint firstItem="uSH-nI-Kz5" firstAttribute="leading" secondItem="Wwg-VX-MGM" secondAttribute="trailing" constant="6" id="cCw-oG-Zxr"/>
+                                            <constraint firstItem="uSH-nI-Kz5" firstAttribute="centerY" secondItem="ECo-Kc-A4s" secondAttribute="centerY" id="nCo-TO-XE2"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="ECo-Kc-A4s" secondAttribute="trailing" id="0cD-tg-y0f"/>
+                                    <constraint firstAttribute="trailing" secondItem="WnP-vb-Bwb" secondAttribute="trailing" id="1mm-ES-xJC"/>
+                                    <constraint firstItem="WnP-vb-Bwb" firstAttribute="top" secondItem="22y-QY-7PC" secondAttribute="top" id="FTu-M6-sWb"/>
+                                    <constraint firstItem="ECo-Kc-A4s" firstAttribute="top" secondItem="WnP-vb-Bwb" secondAttribute="bottom" id="VQp-Jg-7eS"/>
+                                    <constraint firstItem="ECo-Kc-A4s" firstAttribute="leading" secondItem="22y-QY-7PC" secondAttribute="leading" id="fpn-Pb-HgD"/>
+                                    <constraint firstItem="WnP-vb-Bwb" firstAttribute="leading" secondItem="22y-QY-7PC" secondAttribute="leading" id="i9E-wl-z5i"/>
+                                    <constraint firstAttribute="bottom" secondItem="ECo-Kc-A4s" secondAttribute="bottom" id="rFA-q7-JKq"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="22y-QY-7PC" firstAttribute="leading" secondItem="kZE-cO-2aF" secondAttribute="leading" id="1SR-4U-5r3"/>
+                            <constraint firstItem="22y-QY-7PC" firstAttribute="top" secondItem="kZE-cO-2aF" secondAttribute="top" id="1mu-Do-aQS"/>
+                            <constraint firstAttribute="trailing" secondItem="22y-QY-7PC" secondAttribute="trailing" id="AZq-tP-ETf"/>
+                            <constraint firstItem="jaJ-r9-ENn" firstAttribute="top" secondItem="22y-QY-7PC" secondAttribute="bottom" id="x3v-Ps-PI8"/>
+                        </constraints>
+                    </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <tabBarItem key="tabBarItem" title="Item" id="OaE-fk-liZ"/>
+                    <navigationItem key="navigationItem" title="Broadcast" id="ubu-yX-R4I">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="sGw-xg-ulS"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="innerView" destination="22y-QY-7PC" id="Mqo-mO-vwn"/>
+                        <outlet property="innerViewBottomContraint" destination="x3v-Ps-PI8" id="uxh-bR-3SW"/>
+                        <outlet property="messageTextView" destination="Wwg-VX-MGM" id="bKY-L2-oRO"/>
+                        <outlet property="submitButton" destination="uSH-nI-Kz5" id="diL-B6-Kkt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="abv-6w-S3G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-156" y="12491"/>
         </scene>
     </scenes>
     <resources>
