Broadcast Chat animation implemented

--- a/Pod/Assets/SCStoryboard.storyboard
+++ b/Pod/Assets/SCStoryboard.storyboard
@@ -10740,8 +10740,8 @@ Remove search filter?</string>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="ECo-Kc-A4s" secondAttribute="trailing" id="0cD-tg-y0f"/>
                                     <constraint firstAttribute="trailing" secondItem="WnP-vb-Bwb" secondAttribute="trailing" id="1mm-ES-xJC"/>
-                                    <constraint firstItem="WnP-vb-Bwb" firstAttribute="top" secondItem="22y-QY-7PC" secondAttribute="top" id="FTu-M6-sWb"/>
                                     <constraint firstItem="ECo-Kc-A4s" firstAttribute="top" secondItem="WnP-vb-Bwb" secondAttribute="bottom" id="VQp-Jg-7eS"/>
+                                    <constraint firstItem="WnP-vb-Bwb" firstAttribute="top" secondItem="22y-QY-7PC" secondAttribute="top" id="bgO-3t-MuZ"/>
                                     <constraint firstItem="ECo-Kc-A4s" firstAttribute="leading" secondItem="22y-QY-7PC" secondAttribute="leading" id="fpn-Pb-HgD"/>
                                     <constraint firstItem="WnP-vb-Bwb" firstAttribute="leading" secondItem="22y-QY-7PC" secondAttribute="leading" id="i9E-wl-z5i"/>
                                     <constraint firstAttribute="bottom" secondItem="ECo-Kc-A4s" secondAttribute="bottom" id="rFA-q7-JKq"/>
